Hadoop Change Log

Release 1.3.0 - unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

    HDFS-4898. BlockPlacementPolicyWithNodeGroup.chooseRemoteRack() fails to
    properly fallback to local rack. (szetszwo)

    MAPREDUCE-5508. JobTracker memory leak caused by unreleased FileSystem
    objects in JobInProgress#cleanupJob. (Xi Fang via cnauroth)

Release 1.2.2 - unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

    MAPREDUCE-5450. Unnecessary Configuration instantiation in IFileInputStream
    slows down merge. (Stanislav Barton and Ted Yu via Sandy Ryza)

Release 1.2.1 - 2013.07.15

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-9450. HADOOP_USER_CLASSPATH_FIRST is not honored; CLASSPATH
    is PREpended instead of APpended. (Chris Nauroth and harsh via harsh)

    HDFS-4880. Print the image and edits file loaded by the namenode in the
    logs. (Arpit Agarwal via suresh)

  BUG FIXES

    MAPREDUCE-5047. keep.failed.task.files=true causes job failure on 
    secure clusters. (sandyr via tucu)

    MAPREDUCE-5070. TestClusterStatus.testClusterMetrics fails on JDK7. 
    (sandyr via tucu)

    MAPREDUCE-5072. TestDelegationTokenRenewal.testDTRenewal fails in MR1 
    on jdk7. (sandyr via tucu)

    MAPREDUCE-5073. TestJobStatusPersistency.testPersistency fails on 
    JDK7. (sandyr via tucu)

    HDFS-4622. Remove redundant synchronized from 
    FSNamesystem#rollEditLog in branch-1. (Jing Zhao via suresh)

    HDFS-4581. DataNode.checkDiskError should not be called on network errors.
    (Rohit Kochar via kihwal)

    MAPREDUCE-2817. MiniRMCluster hardcodes 'mapred.local.dir' configuration 
    to 'build/test/mapred/local'. (rkanter via tucu)

    MAPREDUCE-5133. TestSubmitJob.testSecureJobExecution is flaky due to job 
    dir deletion race. (sandyr via tucu)

    HDFS-4699. Additional conditions for avoiding unnecessary 