@@ -18,6 +18,10 @@ Release 1.3.0 - unreleased
     MAPREDUCE-5508. JobTracker memory leak caused by unreleased FileSystem
     objects in JobInProgress#cleanupJob. (Xi Fang via cnauroth)
 
+    HDFS-5245. shouldRetry() in WebHDFSFileSystem generates excessive warnings.
+    (Haohui Mai via jing9)
+
+
 Release 1.2.2 - unreleased
 
   INCOMPATIBLE CHANGES
